force-app/main/default/objects/Project__c/fields/Days_in__c.field-meta.xml
<CustomField>
    <fullName>Days_in__c</fullName>
    <label>Days in Sprint</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>