force-app/main/default/objects/Project__c/fields/Employees_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Employees_Assigned__c</fullName>
    <label>Employees Assigned</label>
    <summaryForeignKey>Project_Assignment__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>