force-app/main/default/objects/Project__c/fields/Employees_Required__c.field-meta.xml
<CustomField>
    <fullName>Employees_Required__c</fullName>
    <label>Employees Required</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>