force-app/main/default/objects/Project__c/fields/Fully_Staffed__c.field-meta.xml
<CustomField>
    <fullName>Fully_Staffed__c</fullName>
    <formula>Employees_Assigned__c =  Employees_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fully Staffed</label>
    <type>Checkbox</type>
</CustomField>