force-app/main/default/objects/Project__c/fields/Project_Duration__c.field-meta.xml
<CustomField>
    <fullName>Project_Duration__c</fullName>
    <label>Project Duration(in days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>