force-app/main/default/objects/Project__c/fields/Project_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_End_Date__c</fullName>
    <formula>IF( RecordType.DeveloperName = &quot;Waterfall_project&quot;, Project_Start_Date__c + Project_Duration__c,  Project_Start_Date__c +( Number_of_Sprints__c  *  Days_in__c ))</formula>
    <label>Project End Date</label>
    <type>Date</type>
</CustomField>