force-app/main/default/objects/Project__c/recordTypes/Agile_Project.recordType-meta.xml
<RecordType>
    <fullName>Agile_Project</fullName>
    <active>true</active>
    <label>Agile Project</label>
</RecordType>