force-app/main/default/objects/Project__c/recordTypes/Waterfall_project.recordType-meta.xml
<RecordType>
    <fullName>Waterfall_project</fullName>
    <active>true</active>
    <label>Waterfall project</label>
</RecordType>