force-app/main/default/objects/Project__c/validationRules/Days_in_sprint.validationRule-meta.xml
<ValidationRule>
    <fullName>Days_in_sprint</fullName>
    <active>true</active>
    <errorConditionFormula>Days_in__c &gt;40</errorConditionFormula>
    <errorDisplayField>Days_in__c</errorDisplayField>
    <errorMessage>Days in sprint should not be greater than 40</errorMessage>
</ValidationRule>