force-app/main/default/objects/Project__c/validationRules/Employee_assigned.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_assigned</fullName>
    <active>true</active>
    <errorConditionFormula>Employees_Assigned__c &gt; Employees_Required__c</errorConditionFormula>
    <errorDisplayField>Employees_Required__c</errorDisplayField>
    <errorMessage>Employees required is lesser than employees assigned</errorMessage>
</ValidationRule>