force-app/main/default/objects/Project__c/validationRules/Project_Start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Start_date</fullName>
    <active>true</active>
    <errorConditionFormula>Project_Start_Date__c &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Project_Start_Date__c</errorDisplayField>
    <errorMessage>Project start date cannot be on an earlier date</errorMessage>
</ValidationRule>